[tool.poetry]
name = "mdgachasim"
version = "1.0.10"
description = "A simulator that computes gem cost distributions of Yu-Gi-Oh! Master Duel packs"
authors = ["Marian Plivelic <MarianPlivelic@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
black = "^21.12b0"
flake8 = "^4.0.1"
rope = "^0.22.0"
mypy = "^0.931"
tqdm = "^4.62.3"
jedi = "^0.18.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
